feat: replace typed credential models with dynamic parsing, refactor PDP policies, add offer refresh
- Remove typed credential DTOs (LEARCredentialEmployee, LEARCredentialMachine, LabelCredential, W3CVerifiableCredential)
- Remove per-type credential factories in favor of GenericCredentialBuilder with JSON Schema-driven building
- Add DynamicCredentialParser for schema-based payload extraction
- Refactor PDP policies: merge RequireMandatorEmployee/MachineIssuanceRule into RequireMandatorDelegationRule
- Add CredentialOfferRefreshWorkflow and controller with HTML templates
- Add DraftAutoWithdrawalScheduler for auto-cleanup of abandoned drafts
- Add ProcedureProperties for procedure lifecycle configuration
- Update SdJwtPayloadBuilder for dynamic claim extraction
- Update IssuancePdpServiceImpl for simplified policy context
- Update SecurityConfig with refresh endpoint access rules
- Update all affected tests

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>